# Overseer

./: .gitignore  pyproject.toml
docs/: 1 - Quick-Start Tutorial -- Building a Model From Scratch.md  10 - The Logger and You.md  3 - Anatomy of Overseer - The Control and Graph Panels.md  4 - Demos, Models and User Data.md  5 - Parameters and Presets.md  6 - Writing Simulations.md  7 - Plots and Categories.md  8 - Control Panel Widgets.md  9 - Saving Pictures, Presets, and Data.md  Anatomy of Overseer - The Control and Graph Panels.md  Control Panel Widgets.md  Controls and Keybindings.md  FAQ.md  Feature Model Releases (for Publication).md  Home.md  Interface and Controls.md  Internal-Operation-and-Efficiency.md  Models-‐-Morishima's-Reinvestment-Schema-Model.md  Models.md  Parameters and Presets.md  Plots and Categories.md  Quick-Start Tutorial -- Building a Model From Scratch.md  README.md  Simulation Functions.md  Tutorial-‐-Creating-a-Model-From-Scratch.md  User Data.md  Writing Simulations.md
docs/My Models/: About My Models.md  Models-‐-Morishima-Reproduction-Schema-Constrained.md  Models-‐-Wright's-Cross‐Dual-Disequilibrium-Model-(Three-Commodity).md
docs/assets/: 2026-05-16 14-23-36.mkv  3d-curve.mkv  constrained-problems.mkv  cts-heatmap-demo.mkv  discrete-grid-demo.mkv  hist-demo.mkv  make-model.mkv  moving-widgets.mkv  pie-demo.mkv  save-as-initial.mkv  scatter-demo.mkv  tight-advantages.mkv  wizard-demo.mkv
docs/pictures/: make-controls.mkv
release/linux/: build-tarball.sh  install.sh  launcher.sh  modeling-tools.desktop  uninstall.sh
(+140 files in other folders)
